--- a/styles.css
+++ b/styles.css
@@ -1,58 +1,63 @@
+:root {
+    --main-bg-color: hsl(212, 45%, 89%);
+    --card-bg-color: hsl(0, 0%, 100%);
+    --header-color: hsl(218, 44%, 22%);
+    --content-color: hsl(216, 15%, 48%);
+    --attribution-color: hsl(228, 45%, 44%);
+    --shadow-color: rgba(0, 0, 0, 0.048)
+}
+
 @font-face {
     font-family: Outfit;
     src: url(fonts/Outfit-VariableFont_wght.ttf);
 }
 
 html, body{
-    font-family: Outfit;
+    font-family: Outfit, Verdana, Arial, Tahoma;
     font-size: 15px;
     margin:0;
     height: 100%;
-    background-color: hsl(212, 45%, 89%);
+    background-color: var(--main-bg-color)
 }
 
 main {
     height: 96%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center
 }
 
 .qrcard {
-    
-    background-color: hsl(0, 0%, 100%);
+    padding-top:3vh;
+    background-color: var(--card-bg-color);
     border-radius: 12px;
     margin: 0 auto;
     text-align: center;
-    width: 225px;
-    height: 350px;
-    padding: 10px;
-    box-shadow: 0px 20px 10px rgba(0, 0, 0, 0.048)
+    width: max(22%, 15rem);
+    aspect-ratio: 9/14;
+    box-shadow: 0 2% 1% var(--shadow-color)
 }
 
 img{
     border-radius: 8px;
-}
-
-p {
-    margin: 0;
-    padding: 10px;
+    width: 85%;
 }
 
 .header {
+    margin: 0;
+    padding: 1em 1em 0 1em;
     font-weight: 700;
-    font-size: 16px;
-    color: hsl(218, 44%, 22%);
-    padding-bottom: 0;
+    font-size: clamp(1rem, 1.4vw, 2.5rem);
+    color: var(--header-color)
 }
 
 .content {
-    padding-left: 15px;
-    padding-right: 15px;
+    margin: 0;
+    padding: 1em 1em 1em 1em;
     font-weight: 400;
-    font-size: 12px;
-    color:hsl(216, 15%, 48%);
+    font-size: clamp(0.8rem, 1.2vw, 2.3rem);
+    color: var(--content-color)
 }
 
-.attribution { font-size: 11px; text-align: center;}
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution { font-size: clamp(0.5rem, 0.9vw, 2rem); text-align: center;}
+.attribution a { color: var(--attribution-color); }
